@@ -6,6 +6,8 @@ versions of Red5.
 
 Red5 0.6    (unreleased)
 ------------------------
+Bugfixes:
+- serialization of Maps with non-number keys fixed (APPSERVER-60)
 
 
 Red5 0.6rc2 (2007-02-12)
